--- a/helm/values-dev.yaml
+++ b/helm/values-dev.yaml
@@ -3,7 +3,7 @@ microservice-chart:
   nameOverride: ""
   fullnameOverride: ""
   canaryDelivery:
-    create: true
+    create: false
     ingress:
       create: true
       canary:
