--- a/.devops/deploy-pipelines.yml
+++ b/.devops/deploy-pipelines.yml
@@ -124,7 +124,7 @@ stages:
               kubernetesServiceEndpoint: $(DEV_KUBERNETES_SERVICE_CONN)
               namespace: ecommerce
               command: ls
-              arguments: --filter $(K8S_IMAGE_REPOSITORY_NAME) --output json
+              arguments: --filter ^$(K8S_IMAGE_REPOSITORY_NAME)$ --output json
           - task: Bash@3
             name: helm_chart_version
             displayName: 'Retrieve helm chart version associated to helm release'
@@ -922,7 +922,7 @@ stages:
               kubernetesServiceEndpoint: $(PROD_KUBERNETES_SERVICE_CONN)
               namespace: ecommerce
               command: ls
-              arguments: --filter $(K8S_IMAGE_REPOSITORY_NAME) --output json
+              arguments: --filter ^$(K8S_IMAGE_REPOSITORY_NAME)$ --output json
           - task: Bash@3
             name: helm_chart_version
             displayName: 'Retrieve helm chart version associated to helm release'
