--- a/api-spec/event-dispatcher-api.yaml
+++ b/api-spec/event-dispatcher-api.yaml
@@ -22,7 +22,7 @@ paths:
       operationId: newReceiverCommand
       tags:
         - event-receiver-controller
-      description: Create a new command to handle event receivers lifecycle
+      description: Create a new command to handle event receivers lifecycle. Use optional targetVersion field to target a specific deployment version instead of all versions
       summary: Create a new event receiver command
       requestBody:
         $ref: "#/components/requestBodies/EventReceiverCommandRequest"
@@ -57,6 +57,13 @@ paths:
         - event-receiver-controller
       description: Retrieve receiver status for all module deployed instances
       summary: Retrieve event receiver status
+      parameters:
+        - in: query
+          name: version
+          schema:
+            $ref: '#/components/schemas/DeploymentVersion'
+          required: false
+          description: Filter recever statuses by deployment version
       responses:
         '200':
           description: The event receivers statuses
@@ -95,6 +102,8 @@ components:
           type: string
           description: The effective command to be performed
           enum: [START,STOP]
+        deploymentVersion:
+          $ref: '#/components/schemas/DeploymentVersion'
       required:
         - command
     EventReceiverStatusResponse:
@@ -114,6 +123,8 @@ components:
         instanceId:
           type: string
           description: Module instance unique identifier
+        deploymentVersion:
+          $ref: '#/components/schemas/DeploymentVersion'
         receiverStatuses:
           type: array
           items:
@@ -179,6 +190,12 @@ components:
       maximum: 600
       exclusiveMaximum: true
       example: 200
+    DeploymentVersion:
+      type: string
+      description: the event receiver deployment verison
+      enum:
+        - STAGING
+        - PROD
   requestBodies:
     EventReceiverCommandRequest:
       required: true
